# cedros-pay

./: LICENSE  README.md
server/: .env.example  Cargo.toml  README.md
server/config/: README.md  config.example.yaml  default.yaml  production.yaml  schema-mapping.example.yaml
server/docs/: EMBEDDING.md
server/docs/specs/: 01-overview.md  02-http-endpoints.md  03-http-endpoints-subscriptions.md  04-http-endpoints-refunds.md  (+27 more)
server/migrations/: 20231201000001_initial_schema.sql  20231201000002_add_tenant_id.sql  20231201000003_add_missing_spec_schema.sql  20231201000004_webhook_compound_index.sql  20231201000005_add_critical_indexes.sql  20231201000006_webhook_dequeue_index.sql  20231201000007_refund_compound_index.sql  20251230000001_tenant_compound_pkey.sql  20251230000002_tenant_product_coupon_pkey.sql  20251230000003_performance_indexes.sql  20251230000004_webhook_payload_bytes.sql  20251230000005_payment_tenant_pkey.sql  20260123000001_add_user_id.sql  20260127000003_product_checkout_requirements.sql  20260128000001_pgcrypto_extension.sql  20260128000002_product_inventory_quantity.sql  20260128000003_orders.sql  20260128000005_inventory_adjustments.sql  20260128000010_tax_rates.sql  20260128000011_disputes.sql  20260128000012_gift_cards.sql  20260128000013_collections.sql  20260128000014_product_seo_fields.sql  20260130000001_add_subscription_stripe_index.sql  20260130000002_orders_search_trgm.sql  20260202000001_faqs.sql  20260202000002_faq_visibility.sql  20260202000003_subscription_payment_signature.sql  30260124000001_credits_holds.sql  30260125000001_purchase_user_created_at_index.sql  30260126000001_config_storage.sql  30260126000002_stripe_ids.sql  30260126000003_rename_amount_columns.sql  30260126000004_subscription_columns.sql  30260126000005_product_display_fields.sql  30260127000001_config_category_keys.sql  30260127000002_stripe_refund_requests.sql  30260128000004_orders_fulfillment.sql  30260128000006_product_inventory_policy.sql  30260128000007_shipping_profiles.sql  (+27 more)
server/src/: app.rs  callback.rs  constants.rs  lib.rs  main.rs  payment_workers.rs  router.rs  router_admin.rs  server.rs  state_assembly.rs  ttl_cache.rs
(+1687 files in other folders)
