[package]
name = "cedros-pay"
version = "1.1.18"
edition = "2021"
rust-version = "1.75"
description = "Cedros Pay - Payment processing library and server"
license = "MIT OR Apache-2.0"

[lib]
name = "cedros_pay"
path = "src/lib.rs"

[[bin]]
name = "cedros-pay-server"
path = "src/main.rs"

[features]
default = []

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
bincode = "1"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.14", features = ["yaml"] }
ed25519-dalek = "2"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
subtle = "2"
http-body-util = "0.1"
indexmap = "2"
humantime = "2"
once_cell = "1"
parking_lot = "0.12"
serde_with = "3"
prometheus = "0.13"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
solana-client = "2"
solana-sdk = "2"
solana-transaction-status = "2"
spl-associated-token-account = "4"
spl-memo = "5"
spl-token = "6"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "timeout", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
lru = "0.12"

[dev-dependencies]
tempfile = "3.23.0"
